Gestion des tags, title et commentaire correction css