@@ -6,11 +6,13 @@ import java.net.URL;
 import java.util.List;
 import java.util.regex.Matcher;
 import java.util.regex.Pattern;
+import java.util.stream.Collectors;
 
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 
 import com.tukks.mythoughtback.dto.ThingType;
+import com.tukks.mythoughtback.dto.request.TagEditRequest;
 import com.tukks.mythoughtback.dto.request.ThingsEditRequest;
 import com.tukks.mythoughtback.entity.LinkEntity;
 import com.tukks.mythoughtback.entity.NoteEntity;
@@ -18,6 +20,7 @@ import com.tukks.mythoughtback.entity.ThingsEntity;
 import com.tukks.mythoughtback.entity.tag.Tag;
 import com.tukks.mythoughtback.repository.LinkRepository;
 import com.tukks.mythoughtback.repository.NoteRepository;
+import com.tukks.mythoughtback.repository.TagRepository;
 import com.tukks.mythoughtback.repository.ThingsRepository;
 import com.tukks.mythoughtback.service.internal.LinkPreview;
 
@@ -32,6 +35,7 @@ public class NoteService {
 
 	private final NoteRepository noteRepository;
 	private final ThingsRepository thingsRepository;
+	private final TagRepository tagRepository;
 
 	private final String REGEX_TWITTER = "^https?:\\/\\/twitter\\.com\\/(?:#!\\/)?(\\w+)\\/status(es)?\\/(\\d+)";
 
@@ -59,6 +63,7 @@ public class NoteService {
 		thingsRepository.deleteById(id);
 	}
 
+	// TODO corriger la sauvegarde des tags en duplicate
 	@Transactional
 	public void editThings(final Long id, final ThingsEditRequest thingsEditRequest) {
 		ThingsEntity thingsEntity = thingsRepository.getById(id);
@@ -66,7 +71,7 @@ public class NoteService {
 		if (thingsEntity.getThingType() == ThingType.MARKDOWN) {
 			NoteEntity noteEntity = noteRepository.getById(id);
 			noteEntity.setMarkdown(thingsEditRequest.getNote());
-			if (thingsEditRequest.getTags() != null) { // TODO on les renvoie tous tout le temps?
+			if (thingsEditRequest.getTags() != null) {
 				noteEntity.setTags(createTagsEntityFromString(thingsEditRequest.getTags()));
 			}
 			if (thingsEditRequest.getComment() != null) {
@@ -80,7 +85,7 @@ public class NoteService {
 			if (thingsEditRequest.getTitle() != null) {
 				thingsEntity.setTitle(thingsEditRequest.getTitle());
 			}
-			if (thingsEditRequest.getTags() != null) { // TODO on les renvoie tous tout le temps?
+			if (thingsEditRequest.getTags() != null) {
 				thingsEntity.setTags(createTagsEntityFromString(thingsEditRequest.getTags()));
 			}
 			if (thingsEditRequest.getComment() != null) {
@@ -91,12 +96,16 @@ public class NoteService {
 
 	}
 
-	private static List<Tag> createTagsEntityFromString(List<String> tags) {
+	private List<Tag> createTagsEntityFromString(List<TagEditRequest> tags) {
 		return tags.stream().map(s -> {
-			Tag tag = new Tag();
-			tag.setTag(s);
-			return tag;
-		}).toList();
+			//			Tag existTag = tagRepository.getTagByTag(s.getTag());
+			//			if (existTag != null) {
+			//				return existTag;
+			//			}
+			Tag newTag = new Tag();
+			newTag.setTag(s.getTag());
+			return newTag;
+		}).collect(Collectors.toList());
 	}
 
 	public boolean isTwitterUrl(String url) {
